# sync-with-uv

./: .gitignore  .pre-commit-config.yaml  .pre-commit-hooks.yaml  LICENSE  README.md  pyproject.toml
.github/: CONTRIBUTING.md  dependabot.yml
.github/workflows/: ci.yml
sync_with_uv/: __init__.py  db.py  main.py
tests/: helpers.py  test_additional_dependencies.py  test_frozen.py  test_lock_parser.py  test_mapping.py  test_meta.py  test_sync_repos.py
