[project]
name = "sync-with-uv"
version = "0.1.1"
description = "Sync .pre-commit-config.yaml repos starting from uv.lock"
authors = [{ name = "Dribia Data Research", email = "code@dribia.com" }]
requires-python = ">=3.10"
dependencies = [
    "pyyaml>=6.0.2,<7",
    "tomlkit>=0.13.3,<0.14",
]

[project.scripts]
swu = "sync_with_uv.main:main"

[dependency-groups]
dev = [
    "pre-commit>=4.3.0,<5",
]
ci = [
    "setuptools>=80.9.0,<81",
]
lint = [
    "ruff==0.13.1",
    "mypy==1.18.2",
    "types-pyyaml>=6.0.12,<7",
]
test = [
    "pytest>=8.4.2,<9",
    "pytest-cov>=7.0.0,<8",
    "coverage[toml]>=7.10.6,<8",
]

[tool.uv]
required-version = ">=0.7.20,<1.0"
default-groups = [
    "dev",
    "ci",
    "lint",
    "test",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
addopts = "-svv"
testpaths = ["tests"]

[tool.ruff]
target-version = "py313"

[tool.ruff.lint]
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "C",  # convention
    "B",  # flake8-bugbear
    "D",  # pydocstyle
    "UP",  # pyupgrade
    "N",  # pep8-naming
    "NPY",  # numpy
    "PD",   # pandas
    "RUF",  # ruff
    "PTH",  # pathlib
    "SIM",  # simplify
    "RET",  # return
    "RSE",  # raise
    "Q",  # quotes
    "G",  # logging-format
    "LOG",  # logging
    "ISC",  # implicit str concat
    "C4",  # comprehensions
    "COM",  # commas
    "TD",  # to-do
    "INT",  # gettext
    "TRY",  # tryceratops
    "TID",  # tidy imports
]
ignore = [
    "C901",  # too complex
    "COM812",  # allow missing trailing comma
]

[tool.ruff.lint.isort]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.mypy]
disallow_incomplete_defs = true
disallow_untyped_defs = true
explicit_package_bases = true
files = ["**/*.py"]
namespace_packages = true
show_error_codes = true
